# one-ac-pose

./: .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  example_fountain.ipynb  example_piccadilly.ipynb  setup.py
data/piccadilly/: 1081610695_de3f8ed360_o.K  1086847257_1cbe805abb_o.K
src/: CMakeLists.txt
src/OneACPose/: CMakeLists.txt  solver_one_ac_depth.cpp  solver_one_ac_depth.hpp  types.hpp
src/Samples/: CMakeLists.txt
src/Samples/Real_TwoView/: CMakeLists.txt  main.cpp
src/Samples/Synthetic_TwoView/: CMakeLists.txt  main.cpp
src/Samples/common/: CMakeLists.txt  camera.cpp  camera.hpp  camera_radial.cpp  camera_radial.hpp  dual_number.hpp  features.cpp  features.hpp  local_affine_frame.cpp  local_affine_frame.hpp  numeric.cpp  numeric.hpp  pose_estimation.cpp  pose_estimation.hpp  solver_relative_pose_one_affine_and_relative_depth_minimal_svd.hpp
src/Samples/pyoneacpose/: CMakeLists.txt  __init__.py  bindings.cpp
src/docs/: Doxyfile.in
